--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    // Kotlin Fragment
+    implementation "androidx.fragment:fragment-ktx:1.5.7"
 
     // Navigation Fragment
     implementation"androidx.navigation:navigation-fragment-ktx:2.5.3"
@@ -54,5 +56,5 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'com.squareup.retrofit2:converter-gson'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
