--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs'
+    id 'kotlin-kapt'
+
 }
 
 android {
@@ -49,6 +51,9 @@ dependencies {
     // Kotlin Fragment
     implementation "androidx.fragment:fragment-ktx:1.5.7"
 
+    //With concat adapter
+    implementation "androidx.recyclerview:recyclerview:1.2.0-beta01"
+
     // Navigation Fragment
     implementation"androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation"androidx.navigation:navigation-ui-ktx:2.5.3"
@@ -62,4 +67,8 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
     // LiveData
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.1")
+
+    // Utils
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    kapt 'com.github.bumptech.glide:compiler:4.15.0'
 }
